--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,5 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
+ion-card{
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
+
