--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,3 +3,20 @@ ion-card{
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
+
+.btn{
+    --box-shadow:none;
+}
+
+.text1{
+    font-size:25px;
+    letter-spacing: 0.9px;
+    font-weight:bold;
+}
+
+.text2{
+    margin-top: -10px;
+    font-size:20px;
+    letter-spacing: 0.9px;
+    font-weight:bold;
+}
