--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,8 +1,3 @@
-.logimg img{
-	margin-top:1.2rem;
-	width:50%;
-	padding: 0;
-}
 
 .ContentForm{
 	margin:auto;
@@ -14,34 +9,41 @@
 	color:rgb(14, 1, 1);
 }
 
-.backgroundLogImg{
-	margin:auto;
-	--background: url('../../assets/img/loginimg.jpg') no-repeat 100% 100%;
+.logimg img{
+	width:60%;
+	color:#f4f4f4;
+	margin-top: 2rem;
 }
 
 
-.logotext{
+.logotext1{
 	font-weight:bold;
-	font-size:30px;
+	color:#f4f4f4;
+	font-size:40px;
 	letter-spacing: 1px;
-	text-shadow: 0px 0px 10px  rgba(0,0,0,0.4);
-	color:#1156ce;
+	text-shadow: 0px 0px 10px  rgba(0,0,0,0.2);
+	font-family: 'Shadows Into Light', cursive;
+}
+
+ion-content{
+	--background: var(--ion-color-fovorite-tint);
 }
 
 .forgotpass{
 	border:none;
-	color: #3880ff;
+	color: #f4f4f4;
 	letter-spacing: 0.3px;
 	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: 700;
 }
+
 
 .register{
 	border:none;
 	color: #f04141;
 	letter-spacing: 0.3px;
 	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: 700;
 }
 
 .iconuser{
@@ -54,7 +56,14 @@ ion-item{
 }
 
 .error-messages{
-	font-size: 1em;
-	color:red;
+	font-size: 0.97em;
+	font-weight: bold;
+	color:rgb(240, 63, 10);
 	text-align: center;
+}
+
+.lightbtn{
+	--border-radius: 30px;
+	--padding-left: 15px;
+	--padding-right: 15px;
 }
