--- a/src/app/setting/setting.page.html
+++ b/src/app/setting/setting.page.html
@@ -40,10 +40,9 @@
               </ion-item>
 
               <ion-list-header text-left style="font-size: 15px;color:gray;">Account</ion-list-header>
-          <ion-item>
+          <ion-item routerLink="/editprofile">
               <ion-icon name="cog" color="primary" style="font-size: 25px; margin-right:3px;"></ion-icon>
               <ion-label>Edit Account</ion-label>
-              
             </ion-item>
 
             <ion-item>
