--- a/src/app/home-popover/home-popover.component.html
+++ b/src/app/home-popover/home-popover.component.html
@@ -1,1 +1,8 @@
-<h4 text-center style="margin:10px; font-size:15; font-weight: bold;letter-spacing:0.6px;">Your notifications</h4>
+<ion-content>
+    <ion-list>
+        <ion-item *ngFor="let p of notification">
+            <ion-icon color="warning" name="mail" style="margin-right:10px;"></ion-icon>
+            {{p.notificationsName}}
+        </ion-item>
+    </ion-list>
+</ion-content>
