--- a/src/app/home-popover/home-popover.component.html
+++ b/src/app/home-popover/home-popover.component.html
@@ -1,8 +1,8 @@
 <ion-content>
     <ion-list>
-        <ion-item *ngFor="let p of notification">
+        <ion-item *ngFor="let note of notification.results">
             <ion-icon color="warning" name="mail" style="margin-right:10px;"></ion-icon>
-            {{p.notificationsName}}
+         <b text-left>{{note.Description}}</b>
         </ion-item>
     </ion-list>
 </ion-content>
